# uniapp_assemble

./: .env.example  .gitignore  .uvrc  CLAUDE.md  Makefile  README.md  README_git_security.md  apk_builder_analyzer.py  check_db.py  complete_example.py  debug_download.py  debug_sse.js  demo_git_operations.py  fastapi_gradle_integration.py  fix_apk_download.py  force_refresh.html  git_error_handling.py  git_security_concepts.py  git_security_demo.py  git_utils.py  gradle_monitor.py  init_db.py  main.py  performance_optimization_guide.py  pyproject.toml  requirements.txt  start_uv_server.bat  task_timeout_manager.py  test_base64_frontend.html  test_git_utils.py  test_sse.html
.claude/: settings.local.json
.specify/memory/: constitution.md
database/: __init__.py  async_database.py  async_example_usage.py  async_performance_demo.py  config.py  database.py  example_usage.py  migrations.py  models.py  schema.sql  storage_optimization.py
docs/: README_Gradle_Monitoring.md  git_best_practices_guide.md  sqlite_async_best_practices_guide.md
scripts/: dev-tasks.bat  setup-dev.ps1  setup-dev.sh  verify-migration.sh
specs/001-android-android-git/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-android-android-git/checklists/: requirements.md
specs/001-android-android-git/contracts/: openapi.yaml
specs/002-uv-pip-requirements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-uv-pip-requirements/checklists/: requirements.md
specs/002-uv-pip-requirements/contracts/: configuration-schema.yaml
src/: main.py
src/api/: __init__.py  apks.py  builds.py  files.py  git.py  health.py  projects.py  results.py
src/config/: database.py  settings.py
src/database/: init_db.py  repositories.py
src/models/: __init__.py  android_project.py  base.py  build_log.py  build_result.py  build_task.py  git_operation.py  project_config.py  repository_backup.py
src/services/: __init__.py  android_service.py  apk_service.py  build_service.py  file_service.py  git_service.py  resource_service.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: index.html
src/utils/: exceptions.py  git_utils.py  gradle_utils.py  validators.py
